--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,7 +25,7 @@
         <hr class="my-4">
         <p>Answer a few basic questions.
             Then find the friend with the greatest compatibility!</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Start Here</a>
+        <a class="btn btn-primary btn-lg" href="survey.html" role="button">Start Here</a>
     </div>
 </body>
 
