--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,7 +20,41 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="row mx-auto">
+            <h2>Start Survey</h2>
+        </div>
+        <form>
+            <h3>About You</h3>
+            <div class="form-group">
+                <label for="enterName">
+                    <h5>Name (required)</h5>
+                </label>
+                <input id="enterName" class="form-control" type="text" placeholder="Enter Name">
+            </div>
+            <div class="form-group">
+                <label for="enterImage">
+                    <h5>Set an Image</h5>
+                </label>
+                <input class="form-control" id="enterImage" placeholder="Image URL">
+            </div>
+            <div class="form-group">
+                <label for="question1"><h5>Question 1</h5></label>
+                <select class="form-control" id="question1">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
 
 </html>
