--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,6 +16,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <title>Friend Finder</title>
 </head>
 
@@ -39,22 +41,162 @@
                 <input class="form-control" id="enterImage" placeholder="Image URL">
             </div>
             <div class="form-group">
-                <label for="question1"><h5>Question 1</h5></label>
-                <select class="form-control" id="question1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="question1">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question1">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
                 </select>
             </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="form-group">
+                <label for="question2">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question2">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="form-group">
+                <label for="question3">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question3">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question4">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question4">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question5">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question5">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question6">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question6">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question7">
+                    <h6>Question 1</h6>
+                </label>
+                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <select class="form-control questions" id="question7">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question8">
+                    <h6>Question 8</h6>
+                </label>
+                <p>You rarely get carried away by fantasies and ideas.</p>
+                <select class="form-control questions" id="question8">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question9">
+                    <h6>Question 9</h6>
+                </label>
+                <p>You think that everyone’s views should be respected regardless of whether they are supported by facts
+                    or not.</p>
+                <select class="form-control questions" id="question9">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="question10">
+                    <h6>Question 10</h6>
+                </label>
+                <p>You feel more energetic after spending time with a group of people.</p>
+                <select class="form-control questions" id="question10">
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <button id="submit-button" class="btn btn-primary">Submit</button>
         </form>
     </div>
+    <script type="text/javascript">
+        $("#submit-button").on("click", function () {
+            event.preventDefault();
+            var newEnrty = {
+                name: $("#enterName").val(),
+                photo: $("#enterImage").val(),
+                scores: [
+                    $("#question1").val(), $("#question2").val(),
+                    $("#question3").val(), $("#question4").val(),
+                    $("#question5").val(), $("#question6").val(),
+                    $("#question7").val(), $("#question8").val(),
+                    $("#question9").val(), $("#question10").val()
+                ]
+            }
+            console.log(newEnrty);
+            $.post("/api/friends", newEnrty,
+                function (data) {
+
+                    console.log(data);
+
+                });
+        })
+    </script>
 </body>
 
 </html>
