--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -55,9 +55,9 @@
             </div>
             <div class="form-group">
                 <label for="question2">
-                    <h6>Question 1</h6>
+                    <h6>Question 2</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>Generally speaking, you rely more on your experience than your imagination.</p>
                 <select class="form-control questions" id="question2">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
@@ -68,9 +68,9 @@
             </div>
             <div class="form-group">
                 <label for="question3">
-                    <h6>Question 1</h6>
+                    <h6>Question 3</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>You find it easy to stay relaxed and focused even when there is some pressure.</p>
                 <select class="form-control questions" id="question3">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
@@ -81,9 +81,9 @@
             </div>
             <div class="form-group">
                 <label for="question4">
-                    <h6>Question 1</h6>
+                    <h6>Question 4</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>You rarely do something just out of sheer curiosity.</p>
                 <select class="form-control questions" id="question4">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
@@ -94,9 +94,9 @@
             </div>
             <div class="form-group">
                 <label for="question5">
-                    <h6>Question 1</h6>
+                    <h6>Question 5</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>People can rarely upset you.</p>
                 <select class="form-control questions" id="question5">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
@@ -107,9 +107,9 @@
             </div>
             <div class="form-group">
                 <label for="question6">
-                    <h6>Question 1</h6>
+                    <h6>Question 6</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>It is often difficult for you to relate to other people’s feelings.</p>
                 <select class="form-control questions" id="question6">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
@@ -120,9 +120,9 @@
             </div>
             <div class="form-group">
                 <label for="question7">
-                    <h6>Question 1</h6>
+                    <h6>Question 7</h6>
                 </label>
-                <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                <p>In a discussion, truth should be more important than people’s sensitivities.</p>
                 <select class="form-control questions" id="question7">
                     <option value=1>1 (Strongly Disagree)</option>
                     <option value=2>2</option>
